Fix color of text in tables in dark mode

--- a/site/layouts/partials/css/academic.css
+++ b/site/layouts/partials/css/academic.css
@@ -1941,6 +1941,11 @@ table > tbody > tr:nth-child(odd) > th {
   background-color: #f9f9f9;
 }
 
+.dark table {
+  color: #ddd;
+}
+
+
 /*************************************************
  *  Alerts
  **************************************************/
